fix: reduce gap

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -2254,3 +2254,11 @@ th {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.12);
   }
 }
+
+p {
+  em {
+    display: block;
+    margin-top: -15px;
+    font-style: italic;
+  }
+}
